# Pokemmo-Pok-mon-Of-King

./: CMakeLists.txt  README.md  auto_clean.sh  initialize.sh  make_auto.sh
src/: CMakeLists.txt
src/Test/: CMakeLists.txt
src/Test/src/: test.cpp
src/lib/: CMakeLists.txt
src/lib/include/: find_pokemon.h
src/lib/src/: find_pokemon.cpp
